--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +12,7 @@
 
 <body>
     
-    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #707b5f; font-size: large;">
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #707b5f;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="images/chamei_logo.avif" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
@@ -23,13 +23,13 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" style="margin-left: 20px; margin-right: 20px;" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="margin-left: 20px; margin-right: 20px;" href="menu.html">Menu</a>
+                <a class="nav-link active" href="menu.html">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="margin-left: 20px; margin-right: 20px;" href="#">About</a>
+                <a class="nav-link" href="#">About</a>
               </li>
             </ul>
           </div>
