--- a/index.html
+++ b/index.html
@@ -23,18 +23,24 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" style="margin-left: 20px; margin-right: 20px;" href="index.html">Home</a>
+                <a class="nav-link indexmargin" href="index.html">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" style="margin-left: 20px; margin-right: 20px;" href="menu.html">Menu</a>
+              <li class="nav-item dropdown">
+                <button class="nav-link indexmargin dropbtn2">Menu</button>
+                  <div class="dropdown-content" style="text-align: center;">
+                    <a href="drinks.html">Drinks</a>
+                    <a href="desserts.html">Desserts</a>
+                  </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" style="margin-left: 20px; margin-right: 20px;" href="#">About</a>
+         <li class="nav-item">
+                <a class="nav-link indexmargin" href="news.html">News</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+
+
 
 </body>
 </html>
