--- a/drinks.html
+++ b/drinks.html
@@ -26,9 +26,9 @@
                 <a class="nav-link indexmargin" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <button class="nav-link indexmargin dropbtn2">Menu</button>
+                <button class="nav-link indexmargin dropbtn2 active">Menu</button>
                   <div class="dropdown-content" style="text-align: center;">
-                    <a href="drinks.html">Drinks</a>
+                    <a href="drinks.html" style="background-color: #7c876d;">Drinks</a>
                     <a href="desserts.html">Desserts</a>
                   </div>
               </li>
