--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link indexmargin" href="index.html">Home</a>
+                <a class="nav-link indexmargin active" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <button class="nav-link indexmargin dropbtn2">Menu</button>
