--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
                 <a class="nav-link indexmargin" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <button class="nav-link indexmargin dropbtn2">Menu</button>
+                <button class="nav-link indexmargin dropbtn2 active">Menu</button>
                   <div class="dropdown-content" style="text-align: center;">
                     <a href="drinks.html">Drinks</a>
                     <a href="desserts.html">Desserts</a>
