--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
                   </div>
               </li>
          <li class="nav-item">
-                <a class="nav-link indexmargin" href="news.html">News</a>
+                <a class="nav-link indexmargin active" href="news.html">News</a>
               </li>
             </ul>
           </div>
