--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/wyp4bem.css">
 </head>
 
-<body>
+<body style="background-color: #eae3d3" class="stymie_reg">
     
-    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #707b5f; font-size: large;">
+    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #8c967b; font-size: large;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="images/chamei_logo.avif" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
@@ -39,8 +39,42 @@
           </div>
         </div>
       </nav>
+<br><br>
+<div style="background-color: #e6cdcd;">
+<br><br>
+  <h1 style="margin-left:480px; color:#ad8080" class="stymie_dcd_reg">Chamei Matcha</h1>
+
+<a href="drinks.html">
+      <img src="images/matchaglass-removebg-preview.png" style="height: 400px; margin-left: 160px;" class="img">
+    </a>
+    <a href="desserts.html">
+      <img src="images/icecream-removebg-preview.png" style="height: 300px; margin-left: 30px;" class="img">
+    </a>
+    <a href="drinks.html">
+      <img src="images/latte-removebg-preview.png" style="height: 240px; margin-left: 100px; margin-top: 80px;" class="img">
+    </a>
+    </div>
+<br><br>
+<div style="background-color: #e6c3c3;">
+  <br><br>
+<h1 style="margin-left:100px; color:#8e6a6a" class="stymie_dcd_reg">About</h1>
+<br>
+<h2 style="margin-left:100px; margin-right: 600px; color:#8e6a6a">Welcome to Chamei Matcha! We are proud to introduce to you our highest Japanese Matcha beverages and desserts. Our menu offers a variety of cheezo fruit tea, floats, frappes, soft-serve icre cream, shaved ice, and taiyaki.</h2>
 
 
 
+<br><br>
+</div>
+<br><br>
+<h1 style="margin-left:500px; color:#7b7158" class="stymie_dcd_reg">New Releases</h1>
+<br>
+
+<div class="scroll-container">
+  <img src="images/ad1.jpg" style="height: 400px;">
+  <img src="images/ad2.jpg" style="height: 400px;">
+  <img src="images/ad3.jpg" style="height: 400px;">
+  <img src="images/ad4.jpg" style="height: 400px;">
+</div>
+<br><br>
 </body>
 </html>
