--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 
 <body>
     
-    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #707b5f; font-size: large;">
+    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #8c967b; font-size: large;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="images/chamei_logo.avif" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
