--- a/index.html
+++ b/index.html
@@ -7,73 +7,73 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ybe2qhl.css">
     <link rel="stylesheet" href="https://use.typekit.net/wyp4bem.css">
 </head>
 
-<body style="background-color: #eae3d3" class="stymie_reg">
+<body style="background-color: #fff9ec;" class="stymie_reg">
     
-    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #8c967b; font-size: large;">
+    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #fff9ec; font-size: large;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/chamei_logo.avif" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
-              </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link indexmargin active" href="index.html">Home</a>
+                <a class="nav-link indexmargin active dropbtn2" style="color:#5b6354" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <button class="nav-link indexmargin dropbtn2">Menu</button>
+                <button class="nav-link indexmargin dropbtn2" style="color:#747c6c;">Menu</button>
                   <div class="dropdown-content" style="text-align: center;">
                     <a href="drinks.html">Drinks</a>
                     <a href="desserts.html">Desserts</a>
                   </div>
               </li>
          <li class="nav-item">
-                <a class="nav-link indexmargin" href="news.html">News</a>
-              </li>
+                <a class="nav-link indexmargin" href="news.html" style="color:#747c6c">News</a>
+              </li> 
             </ul>
           </div>
         </div>
       </nav>
-<br><br>
-<div style="background-color: #e6cdcd;">
-<br><br>
-  <h1 style="margin-left:480px; color:#ad8080" class="stymie_dcd_reg">Chamei Matcha</h1>
 
-<a href="drinks.html">
-      <img src="images/matchaglass-removebg-preview.png" style="height: 400px; margin-left: 160px;" class="img">
-    </a>
-    <a href="desserts.html">
-      <img src="images/icecream-removebg-preview.png" style="height: 300px; margin-left: 30px;" class="img">
-    </a>
-    <a href="drinks.html">
-      <img src="images/latte-removebg-preview.png" style="height: 240px; margin-left: 100px; margin-top: 80px;" class="img">
-    </a>
-    </div>
-<br><br>
-<div style="background-color: #e6c3c3;">
-  <br><br>
-<h1 style="margin-left:100px; color:#8e6a6a" class="stymie_dcd_reg">About</h1>
-<br>
-<h2 style="margin-left:100px; margin-right: 600px; color:#8e6a6a">Welcome to Chamei Matcha! We are proud to introduce to you our highest Japanese Matcha beverages and desserts. Our menu offers a variety of cheezo fruit tea, floats, frappes, soft-serve icre cream, shaved ice, and taiyaki.</h2>
+      <h1 style="text-align:center; color:#757d6d; font-size: xxx-large;" class="rocareg"><strong>Chamei Matcha</strong></h1>
+
+      <div class="container">
+        <div style="float:right">
+          <a href="drinks.html">
+            <img src="images/matchaglass-removebg-preview.png" style="height: 400px; margin-left: 30px;" class="img">
+          </a>
+          <a href="desserts.html">
+            <img src="images/icecream-removebg-preview.png" style="height: 300px;" class="img">
+          </a>
+        </div>
+        <div class="text rocalight p" style="color:#757d6d">
+            <p>We are proud to introduce to you our highest</p>
+            <p>Japanese Matcha beverages and desserts.</p>
+            <p> Our menu offers a variety of cheezo fruit tea, floats, </p>
+            <p>frappes, soft-serve ice cream, shaved ice, and taiyaki.</p>
+        </div>
+      </div> 
 
 
 
+    
+
+
 <br><br>
-</div>
-<br><br>
-<h1 style="margin-left:500px; color:#7b7158" class="stymie_dcd_reg">New Releases</h1>
+<h1 style="text-align:center; color:#757d6d; font-size: xxx-large;" class="rocareg">New Releases</h1>
 <br>
 
 <div class="scroll-container">
   <img src="images/ad1.jpg" style="height: 400px;">
-  <img src="images/ad2.jpg" style="height: 400px;">
   <img src="images/ad3.jpg" style="height: 400px;">
-  <img src="images/ad4.jpg" style="height: 400px;">
+  <img src="images/ad4.jpg" style="height: 400px;"> 
+  <img src="images/parfait.jpg" style="height: 400px;">
+  <img src="images/ad2.jpg" style="height: 400px;">
+  <img src="images/merch.jpg" style="height: 400px;">
+  <img src="images/fish.jpg" style="height: 400px;">
 </div>
 <br><br>
 </body>
