--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/ybe2qhl.css">
     <link rel="stylesheet" href="https://use.typekit.net/wyp4bem.css">
+    <head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
 </head>
 
 <body style="background-color: #fff9ec;" class="stymie_reg">
@@ -21,7 +24,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link indexmargin active dropbtn2" style="color:#5b6354" href="index.html">Home</a>
+                <a class="nav-link indexmargin active dropbtn2" style="color:#414b39" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <button class="nav-link indexmargin dropbtn2" style="color:#747c6c;">Menu</button>
@@ -57,13 +60,11 @@
         </div>
       </div> 
 
-
-
     
 
 
 <br><br>
-<h1 style="text-align:center; color:#757d6d; font-size: xxx-large;" class="rocareg">New Releases</h1>
+<h1 style="text-align:center; color:#757d6d; font-size: xxx-large;" class="rocathin">New Releases</h1>
 <br>
 
 <div class="scroll-container">
@@ -75,6 +76,23 @@
   <img src="images/merch.jpg" style="height: 400px;">
   <img src="images/fish.jpg" style="height: 400px;">
 </div>
-<br><br>
+<br><br><br>
+
+<div class="mb-4 p-4 footer" style="background-color: #a6b898; display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
+
+  <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/profile.php?id=100076372266571" role="button" aria-label="Visit us on Facebook">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/chameimatchabellevue/?hl=en" role="button" aria-label="Visit us on Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+
+
+  <div style="color: white; margin-left: 15px; margin-top:10px" class="p">
+    <p>400 Bellevue Square Ste 188</p>
+    <p>Bellevue, WA 98004</p>
+  </div>
+</div>
+
 </body>
 </html>
