updated all pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </div>
               </li>
          <li class="nav-item">
-                <a class="nav-link indexmargin" href="news.html" style="color:#747c6c">News</a>
+                <a class="nav-link indexmargin" href="gallery.html" style="color:#747c6c">Gallery</a>
               </li> 
             </ul>
           </div>
@@ -60,7 +60,6 @@
         </div>
       </div> 
 
-    
 
 
 <br><br>
@@ -93,6 +92,7 @@
     <p>Bellevue, WA 98004</p>
   </div>
 </div>
+
 
 </body>
 </html>
