--- a/gallery.html
+++ b/gallery.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <title>Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ybe2qhl.css">
     <link rel="stylesheet" href="https://use.typekit.net/wyp4bem.css">
+    <head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
 </head>
 
-<body>
+<body style="background-color: #fff9ec;" class="stymie_reg">
     
-    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #8c967b; font-size: large;">
+    <nav class="navbar navbar-expand-sm navbar-dark stymie_reg" style="background-color: #fff9ec; font-size: large;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/chamei_logo.avif" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
-              </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link indexmargin" href="index.html">Home</a>
+                <a class="nav-link indexmargin active dropbtn2" style="color:#747c6c;" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <button class="nav-link indexmargin dropbtn2 active">Menu</button>
+                <button class="nav-link indexmargin dropbtn2" style="color:#747c6c">Menu</button>
                   <div class="dropdown-content" style="text-align: center;">
                     <a href="drinks.html">Drinks</a>
                     <a href="desserts.html">Desserts</a>
                   </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link indexmargin" href="news.html">News</a>
-              </li>
+         <li class="nav-item">
+                <a class="nav-link indexmargin" href="gallery.html" style="color:#414b39;">Gallery</a>
+              </li> 
             </ul>
           </div>
         </div>
       </nav>
 
-
+     
 
 </body>
 </html>
