--- a/drinks.html
+++ b/drinks.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/ybe2qhl.css">
     <link rel="stylesheet" href="https://use.typekit.net/wyp4bem.css">
-    <head>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    </head>
+    <link rel="javascript" href="js/chamei.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<style>
+  .img{
+    width:300px;
+  }
+</style>
+
 </head>
 
 <body style="background-color: #fff9ec;" class="stymie_reg">
@@ -41,7 +47,28 @@
         </div>
       </nav>
 
-     
+<br>
+
+      <div class="row rocareg" style="margin-left: 30px; color:#414b39">
+        <div class="col-sm-9">
+          <h1>Latte</h1>
+          <div class="row">
+            <div class="col-8 col-sm-6 img">
+              <img src="images/matcha1.png">
+            </div>
+            <div class="col-4 col-sm-6 img">
+              <img src="images/matcha2.png">
+            </div>
+            <div class="col-2 col-sm-4 img">
+              <img src="images/matcha3.png">
+            </div>
+            <div class="col-1 col-sm-2 img">
+              <img src="images/matcha4.png">
+            </div>
+          </div>
+        </div>
+      </div>
+
 
 </body>
 </html>
