--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <h1 style="text-align:center; color:#757d6d; font-size: xxx-large;" class="rocareg"><strong>Chamei Matcha</strong></h1>
 
-      <div class="container">
+      <div class="contain">
         <div style="float:right">
           <a href="drinks.html">
             <img src="images/matchaglass-removebg-preview.png" style="height: 400px; margin-left: 30px;" class="img">
@@ -76,6 +76,7 @@
   <img src="images/fish.jpg" style="height: 400px;">
 </div>
 <br><br><br>
+
 
 <div class="mb-4 p-4 footer" style="background-color: #a6b898; display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
 
