--- a/drinks.html
+++ b/drinks.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/ybe2qhl.css">
     <link rel="stylesheet" href="https://use.typekit.net/wyp4bem.css">
-    <link rel="javascript" href="js/chamei.js">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <style>
@@ -49,26 +49,30 @@
 
 <br>
 
-      <div class="row rocareg" style="margin-left: 30px; color:#414b39">
-        <div class="col-sm-9">
-          <h1>Latte</h1>
-          <div class="row">
-            <div class="col-8 col-sm-6 img">
-              <img src="images/matcha1.png">
-            </div>
-            <div class="col-4 col-sm-6 img">
-              <img src="images/matcha2.png">
-            </div>
-            <div class="col-2 col-sm-4 img">
-              <img src="images/matcha3.png">
-            </div>
-            <div class="col-1 col-sm-2 img">
-              <img src="images/matcha4.png">
-            </div>
-          </div>
-        </div>
-      </div>
 
+<div class="row rocareg" style="margin-left: 20px; color:#414b39">
+  <h1>Lattes</h1>
+  <div class="row">
+    <div class="scroll-container">
+      <img id="myImg1" src="images/matcha1.png" alt="Matcha Latte" class="img clickableImage">
+      <img id="myImg2" src="images/matcha2.png" alt="Lavendar Matcha Latte" class="img clickableImage">
+      <img id="myImg3" src="images/matcha3.png" alt="Ube Matcha Latte" class="img clickableImage">
+      <img id="myImg4" src="images/matcha4.png" alt="Matcha Coconut Cloud" class="img clickableImage">
+      <img id="myImg5" src="images/matcha5.png" alt="Brown Sugar Matcha Latte" class="img clickableImage">
+    </div>
+        </div>
+        <div id="myModal" class="modal rocathin">
+
+          <span class="close">&times;</span>
+
+
+          <img class="modal-content" id="img01">
+
+          <div id="caption"></div>
+        </div>
+  </div>  
+
+<script src="js/chamei.js"></script>
 
 </body>
 </html>
