--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <div class="contain">
         <div style="float:right">
           <a href="drinks.html">
-            <img src="images/matchaglass-removebg-preview.png" style="height: 400px; margin-left: 30px;" class="img">
+            <img src="images/matchaglass-removebg-preview.png" style="height: 400px; margin-left: 30px;" class="img clickableImage">
           </a>
           <a href="desserts.html">
-            <img src="images/icecream-removebg-preview.png" style="height: 300px;" class="img">
+            <img src="images/icecream-removebg-preview.png" style="height: 300px;" class="img clickableImage">
           </a>
         </div>
         <div class="text rocalight p" style="color:#757d6d">
