--- a/drinks.html
+++ b/drinks.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/fzv2uyb.css">
     <link rel="stylesheet" href="https://use.typekit.net/nvl5fgs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link rel="icon" type="image" href="images/chamei_logo.avif">
 <style>
   .img{
     width:300px;
