--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 
-<div class="mb-4 p-4 footer" style="background-color: #cfa7a7; display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
+<div class="mb-4 p-4 footer mundialitalic" style="background-color: #cfa7a7; display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
 
   <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/profile.php?id=100076372266571" role="button" target="_blank" aria-label="Visit us on Facebook">
     <i class="fab fa-facebook-f"></i>
