--- a/desserts.html
+++ b/desserts.html
@@ -140,7 +140,7 @@
  
     <br><br> 
         
-<div class="mb-4 p-4 footer" style="background-color: #cfa7a7; display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
+<div class="mb-4 p-4 footer mundialitalic" style="background-color: #cfa7a7; display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
 
   <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/profile.php?id=100076372266571"  target="_blank" role="button" aria-label="Visit us on Facebook">
     <i class="fab fa-facebook-f"></i>
